import logging
import uuid # For generating mock analysis IDs
import time
import json # For result_data_json

# Assuming 'generated_protos' is in PYTHONPATH
from common_pb2 import UUID as CommonUUID, Timestamp as CommonTimestamp, StandardErrorResponse
from analysis_engine_service.analysis_engine_pb2 import (
    AnalysisRequest,
    AnalysisResponse,
    AnalysisStatus,
    AnalysisType
)
from analysis_engine_service.analysis_engine_pb2_grpc import AnalysisEngineServiceServicer

# Attempt to import the existing AnalysisService
# This path depends on how the project is structured and PYTHONPATH
# Assuming analysis-engine-service is the root for this import
try:
    from analysis_engine_service.services.analysis_service import AnalysisService
    # The AnalysisService in the provided file also uses MarketData and AnalysisResult models
    # from analysis_engine.models.market_data import MarketData
    # from analysis_engine.models.analysis_result import AnalysisResult
    # For a placeholder, we might not need to construct full MarketData objects
except ImportError:
    logging.warning("Could not import AnalysisService. Placeholder logic will be more basic.")
    AnalysisService = None


logger = logging.getLogger(__name__)

class AnalysisEngineServicer(AnalysisEngineServiceServicer):
    """
    gRPC servicer for the AnalysisEngineService.
    """

    def __init__(self):
        if AnalysisService:
            self.analysis_service = AnalysisService() # Initialize with default params
        else:
            self.analysis_service = None
        self._initialized_analysis_service = False


    async def _ensure_service_initialized(self):
        if self.analysis_service and not self._initialized_analysis_service:
            try:
                await self.analysis_service.initialize()
                self._initialized_analysis_service = True
                logger.info("AnalysisService initialized successfully.")
            except Exception as e:
                logger.error(f"Failed to initialize AnalysisService: {e}", exc_info=True)
                # You might want to prevent further calls or handle this state
                self.analysis_service = None # Or some other error state handling


    async def RequestAnalysis(self, request: AnalysisRequest, context) -> AnalysisResponse:
        """
        Handles the RequestAnalysis RPC call.
        Placeholder implementation that attempts to use the existing AnalysisService.
        """
        logger.info(f"Received RequestAnalysis request: {request.request_id.value} for {request.instrument_symbol}")

        await self._ensure_service_initialized()

        current_time_val = time.time()
        current_seconds = int(current_time_val)
        current_nanos = int((current_time_val - current_seconds) * 1e9)
        response_timestamp = CommonTimestamp(seconds=current_seconds, nanos=current_nanos)

        mock_analysis_id = CommonUUID(value=str(uuid.uuid4()))

        if not self.analysis_service:
            error_response = StandardErrorResponse(
                error_id=CommonUUID(value=str(uuid.uuid4())),
                error_message="AnalysisService not available or failed to initialize.",
                error_code=500 # Internal Server Error
            )
            return AnalysisResponse(
                request_id=request.request_id,
                analysis_id=mock_analysis_id, # Still generate an ID for the attempt
                status=AnalysisStatus.FAILED,
                summary="Internal error: AnalysisService unavailable.",
                result_data_json="{}",
                timestamp=response_timestamp,
                error=error_response
            )

        try:
            # Placeholder: Map gRPC AnalysisType to an analyzer_name if possible
            # This is a very basic mapping. A real implementation would be more robust.
            analyzer_name_map = {
                AnalysisType.TREND_ANALYSIS: "trend_analyzer", # Example name
                AnalysisType.VOLATILITY_ANALYSIS: "volatility_analyzer", # Example name
                AnalysisType.SENTIMENT_ANALYSIS: "sentiment_analyzer", # Example name
                # Add more mappings, or use a default if AnalysisService supports it.
                # The discovered 'confluence' analyzer might be a good default.
                AnalysisType.ANALYSIS_TYPE_UNSPECIFIED: "confluence" 
            }
            analyzer_name = analyzer_name_map.get(request.analysis_type, "confluence")
            
            logger.info(f"Attempting to use analyzer: {analyzer_name} via AnalysisService.")

            # For a true placeholder that doesn't actually call `run_analysis` yet (which needs MarketData)
            # we can call a simpler method like `list_available_analyzers` or `get_analyzer_details`.
            # available_analyzers = await self.analysis_service.list_available_analyzers()
            # summary = f"Analysis placeholder for {analyzer_name}. Available: {[a['name'] for a in available_analyzers]}"
            # result_data = {"available_analyzers": available_analyzers}

            # More advanced placeholder: Simulate calling run_analysis if it were simpler
            # This part is still mock because constructing MarketData and handling real results
            # is beyond a simple placeholder for gRPC plumbing.
            summary = f"Placeholder analysis for '{request.instrument_symbol}' using '{analyzer_name}'. Parameters: {dict(request.parameters)}"
            result_data = {
                "instrument": request.instrument_symbol,
                "type": AnalysisType.Name(request.analysis_type),
                "parameters": dict(request.parameters),
                "mock_result": "Trend is up (simulated)"
            }
            
            analysis_response = AnalysisResponse(
                request_id=request.request_id,
                analysis_id=mock_analysis_id,
                status=AnalysisStatus.COMPLETED, # Mock status
                summary=summary,
                result_data_json=json.dumps(result_data),
                timestamp=response_timestamp
            )
            logger.info(f"Returning AnalysisResponse for request {request.request_id.value}")
            return analysis_response

        except Exception as e:
            logger.error(f"Error during RequestAnalysis for {request.request_id.value}: {e}", exc_info=True)
            # context.set_code(grpc.StatusCode.INTERNAL)
            # context.set_details(f"Internal error during analysis: {e}")
            
            error_id_val = CommonUUID(value=str(uuid.uuid4()))
            error_response = StandardErrorResponse(
                error_id=error_id_val,
                error_message=f"An unexpected error occurred: {str(e)}",
                error_code=500 # Generic internal error
            )
            return AnalysisResponse(
                request_id=request.request_id,
                analysis_id=mock_analysis_id, # Mock analysis_id
                status=AnalysisStatus.FAILED,
                summary=f"Analysis failed for {request.instrument_symbol}: {str(e)}",
                result_data_json="{}",
                timestamp=response_timestamp,
                error=error_response
            )

# Example of how to start the server (this part would typically go into main.py or similar)
# if __name__ == '__main__':
#     import grpc
#     from concurrent import futures
#     logging.basicConfig(level=logging.INFO)
#     server = grpc.server(futures.ThreadPoolExecutor(max_workers=10)) # Or grpc.aio.server()
#     # from analysis_engine_service.analysis_engine_pb2_grpc import add_AnalysisEngineServiceServicer_to_server
#     # add_AnalysisEngineServiceServicer_to_server(AnalysisEngineServicer(), server)
#     server.add_insecure_port('[::]:50052')
#     logger.info("Starting gRPC server on port 50052...")
#     server.start()
#     server.wait_for_termination()
#
# Note: Ensure 'generated_protos' and the project root are in PYTHONPATH.
# Example: export PYTHONPATH=$PYTHONPATH:./generated_protos:.
# (if 'analysis_engine_service' is a top-level package in the project root)
# The protoc command used previously created:
# generated_protos/common_pb2.py
# generated_protos/analysis_engine_service/analysis_engine_pb2.py
# etc.
# So, `export PYTHONPATH=$PYTHONPATH:/path/to/your/project/generated_protos` is correct.
# And if analysis_engine_service module is under project_root, then project_root needs to be in path too.
# e.g., if file is /app/analysis-engine-service/services/grpc_servicer.py
# and generated_protos is /app/generated_protos
# and main.py will be /app/analysis-engine-service/core/main.py
# then from /app: PYTHONPATH=./generated_protos:.
# would allow `from analysis_engine_service.services.analysis_service import AnalysisService`
# and `from common_pb2 import ...`
# and `from analysis_engine_service.analysis_engine_pb2 import ...`
# The code in main.py that modifies sys.path will handle this for runtime if structured correctly.
